[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4.12"
serde = {version = "1.0.137", features = ["derive"]}
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
tower-http = "0.3.4"